# mcp-strudel

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  shared_websocket.py  sse_strudel_server.py  ui_app.py
static/: index.html
